Cambiado para ajustarse a ejs y añadido createUser a la api
